--- a/src/style.css
+++ b/src/style.css
@@ -30,28 +30,22 @@ button:active {
   font-family: sans-serif;
   display: flex;
   flex-direction: column;
-  margin-left: 20vw;
-  margin-right: 20vw;
 }
 #container {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: rgba(241, 238, 238, 0.791);
-  border: 5px solid black;
   border-radius: 1rem;
 }
-/* body{
-  background: url('./background_image.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-} */
-.title {
-  padding: 3rem;
+
+.title, .menuItemTitle {
   margin: 2rem;
+  padding: 1rem;
   margin-left: 5rem;
   margin-right: 5rem;
   width: 36vw;
+  min-width: 300px;
   border: 5px solid black;
   border-radius: 1rem;
   max-width: 700px;
@@ -60,14 +54,13 @@ button:active {
 }
 
 .about_us,.hours,.location,.menuItem {
-  text-align: left;
-  padding: 0rem 3rem;
   font-size: medium;
   text-align: center;
 }
 
 #headline {
   text-align: center;
+  padding: 1rem;
 }
 
 #image{
@@ -86,13 +79,6 @@ button:active {
   min-width: 700px;
 }
 
-.menuItemTitle {
-  width: 36vw;
-  border: 5px solid black;
-  border-radius: 1rem;
-  padding: 5vh 4vw;
-  font-size: x-large;
-}
 .mainItemTitle {
   font-size: x-large;
   font-weight: 400;
@@ -102,9 +88,8 @@ button:active {
   background: black;
   color: rgba(241, 238, 238, 0.791);
 }
-@media screen and (max-width: 1000px) {
-  #content,.title,.menuContainer,.menuItemTitle {
+@media screen and (max-width: 100px) {
+  #container {
     width: 100%; /* The width is 100%, when the viewport is 800px or smaller */
-    margin: 0;
   }
 }
